crates/viewer/dl_dataframe_ui/tests/snapshots/filter_tests__string_contains@nulls_ends_with_c.snap
---
source: crates/viewer/dl_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: String(
        StringFilter {
            operator: EndsWith,
            query: "c",
        },
    ),
    field: Field {
        name: "column",
        data_type: Utf8,
        nullable: true,
    },
    unfiltered: StringArray
    [
      "a",
      "b",
      null,
      "ab",
      "A B",
      "aBc",
    ],
    filtered: StringArray
    [
      "aBc",
    ],
}
